tests/ui/rfcs/rfc-0000-never_patterns/ICE-130779-never-arm-no-oatherwise-block-fix.stderr
error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/ICE-130779-never-arm-no-oatherwise-block-fix.rs:9:11
   |
LL |         ! |
   |         - ^
   |         |
   |         while parsing this or-pattern starting here
   |
help: remove the `|`
   |
LL -         ! |
LL +         !
   |

error: a never pattern is always unreachable
  --> $DIR/ICE-130779-never-arm-no-oatherwise-block-fix.rs:10:20
   |
LL |         if true => {}
   |                    ^^ this will never be executed
   |
   = help: remove the match arm expression

error: aborting due to 2 previous errors

